@@ -40,7 +40,7 @@ specifier|final
 class|class
 name|SingletonSortedSetDocValues
 extends|extends
-name|SortedSetDocValues
+name|RandomAccessOrds
 block|{
 DECL|field|in
 specifier|private
@@ -48,15 +48,15 @@ specifier|final
 name|SortedDocValues
 name|in
 decl_stmt|;
-DECL|field|docID
+DECL|field|currentOrd
 specifier|private
-name|int
-name|docID
+name|long
+name|currentOrd
 decl_stmt|;
-DECL|field|set
+DECL|field|ord
 specifier|private
-name|boolean
-name|set
+name|long
+name|ord
 decl_stmt|;
 comment|/** Creates a multi-valued view over the provided SortedDocValues */
 DECL|method|SingletonSortedSetDocValues
@@ -100,30 +100,18 @@ name|long
 name|nextOrd
 parameter_list|()
 block|{
-if|if
-condition|(
-name|set
-condition|)
-block|{
-return|return
-name|NO_MORE_ORDS
-return|;
-block|}
-else|else
-block|{
-name|set
+name|long
+name|v
+init|=
+name|currentOrd
+decl_stmt|;
+name|currentOrd
 operator|=
-literal|true
+name|NO_MORE_ORDS
 expr_stmt|;
 return|return
-name|in
-operator|.
-name|getOrd
-argument_list|(
-name|docID
-argument_list|)
+name|v
 return|;
-block|}
 block|}
 annotation|@
 name|Override
@@ -136,15 +124,16 @@ name|int
 name|docID
 parameter_list|)
 block|{
-name|this
+name|currentOrd
+operator|=
+name|ord
+operator|=
+name|in
 operator|.
+name|getOrd
+argument_list|(
 name|docID
-operator|=
-name|docID
-expr_stmt|;
-name|set
-operator|=
-literal|false
+argument_list|)
 expr_stmt|;
 block|}
 annotation|@
@@ -204,6 +193,57 @@ name|lookupTerm
 argument_list|(
 name|key
 argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|ordAt
+specifier|public
+name|long
+name|ordAt
+parameter_list|(
+name|int
+name|index
+parameter_list|)
+block|{
+return|return
+name|ord
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|cardinality
+specifier|public
+name|int
+name|cardinality
+parameter_list|()
+block|{
+return|return
+call|(
+name|int
+call|)
+argument_list|(
+name|ord
+operator|>>>
+literal|63
+argument_list|)
+operator|^
+literal|1
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|termsEnum
+specifier|public
+name|TermsEnum
+name|termsEnum
+parameter_list|()
+block|{
+return|return
+name|in
+operator|.
+name|termsEnum
+argument_list|()
 return|;
 block|}
 block|}
